--- a/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
@@ -18,17 +18,32 @@
 				<table class="table table-hover" >
 					<thead>
 						<tr>
-							<th ng-click="ctrl.trier_par('Nom')">Nom </th>
-							<th ng-click="ctrl.trier_par('Prenom')">Prenom</th>
-							<th ng-click="ctrl.trier_par('Adresse')">Adresse</th>
-							<th ng-click="ctrl.trier_par('Email')">Email</th>
-						<th ng-click="ctrl.trier_par('Revenus')">Revenus</th>							
+							<th ng-click="dmdctrl.trier_par('nom'); flechetri_1 = !flechetri_1; flechetri_2 = false; flechetri_3 = false; flechetri_4 = false; flechetri_5 = false ">Nom
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_1" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_1" />
+							</th>
+							<th ng-click="dmdctrl.trier_par('prenom'); flechetri_2 = !flechetri_2; flechetri_1 = false; flechetri_3 = false; flechetri_4 = false; flechetri_5 = false  ">Prenom
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_2" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_2" />
+							</th>
+							<th ng-click="dmdctrl.trier_par('adresse'); flechetri_3 = !flechetri_3; flechetri_2 = false; flechetri_1 = false; flechetri_4 = false; flechetri_5 = false  ">Adresse
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_3" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_3" />
+							</th>
+							<th ng-click="dmdctrl.trier_par('Email'); flechetri_4 = !flechetri_4; flechetri_2 = false; flechetri_1 = false; flechetri_3 = false; flechetri_5 = false  ">Email
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_4" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_4" />
+							</th>
+							<th ng-click="dmdctrl.trier_par('Revenus'); flechetri_5 = !flechetri_5; flechetri_2 = false; flechetri_1 = false; flechetri_4 = false; flechetri_3 = false  ">Revenus
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_5" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_5" />
+							</th>							
 							<th width="20%">Attribution</th>
 
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="demande in dmdctrl.demandeCreationClient | filter:search:strict | orderBy:tripar ">
+						<tr ng-repeat="demande in dmdctrl.demandeCreationClient | filter:search:strict | orderBy:tripar:sens ">
 							<td>{{demande.nom}}</td>
 							<td>{{demande.prenom}}</td>
 							<td>{{demande.adresse}}</td>
