--- a/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
@@ -17,28 +17,31 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th ng-click="ctrl.trier_par('nom')">Nom <img
-								class="icone_liste" src="static/imgs/flecheHaut.png"
-								ng-hide="flechetri_1" ng-click="flechetri_1 = !flechetri_1" />
-								<img class="icone_liste" src="static/imgs/flecheBas.png"
-								ng-hide="!flechetri_1" ng-click="flechetri_1 = !flechetri_1" /></th>
-							<th ng-click="ctrl.trier_par('prenom')">Prenom</th>
-							<th ng-click="ctrl.trier_par('adresse')">Adresse</th>
-							<th width="10%" ng-click="ctrl.trier_par()">Editer</th>
-							<th width="10%" ng-click="ctrl.trier_par()">Supprimer</th>
-
+							<th ng-click="ctrl.trier_par('nom'); flechetri_1 = !flechetri_1; flechetri_2 = false; flechetri_3 = false ">Nom
+							<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_1" />
+							<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_1" />
+							</th>
+							<th ng-click="ctrl.trier_par('prenom'); flechetri_2 = !flechetri_2; flechetri_1 = false; flechetri_3 = false ">Prenom
+							<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_2" />
+							<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_2" />
+							</th>
+							<th ng-click="ctrl.trier_par('adresse'); flechetri_3 = !flechetri_3; flechetri_2 = false; flechetri_1 = false ">Adresse
+							<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_3" />
+							<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_3" />
+							</th>
+							<th width="10%" >Editer</th>
+							<th width="10%" >Supprimer</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr
-							ng-repeat="Conseiller in cons_admin | filter:searchCons:strict | orderBy:tripar ">
+						<tr	ng-repeat="Conseiller in cons_admin | filter:searchCons:strict | orderBy:tripar:sens ">
 							<td ng-model= "cons.nom">{{Conseiller.nom}}</td>
 							<td>{{Conseiller.prenom}}</td>
 							<td>{{Conseiller.adresse}}</td>
 							<td>
-								 <a href="#/admin/Admin_EditCons/{{Conseiller.id}}"><img
-								class="icone_liste" src="static/imgs/crayon.png"
-								 /> </a>
+								<a href="#/admin/Admin_EditCons/{{Conseiller.id}}">
+									<img class="icone_liste" src="static/imgs/crayon.png"/>
+								</a>
 							</td>
 							<td ng-click="ctrl.deleteCons(Conseiller)">
 								<img class="icone_liste" src="static/imgs/delete.png"/>
