--- a/GBriceCorp/src/main/webapp/static/views/Cli_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_DetailCompte.html
@@ -1,6 +1,5 @@
 <div class=" panel panel-default "
-	ng-if="((ctrl.currentUser.typeUser == 3)?true:false)"
->
+	ng-if="((ctrl.currentUser.typeUser == 3)?true:false)">
 	<div class="panel-heading ">
 		<span class="lead">Espace de {{ctrl.currentUser.prenom}}
 			{{ctrl.currentUser.nom}}</span>
@@ -17,28 +16,25 @@
 </div>
 <div class=" panel panel-default "
 	ng-init="ctrl.getClientByCompteId(compte_id)"
-	ng-if="((ctrl.currentUser.typeUser == 2)?true:false)"
-	>
+	ng-if="((ctrl.currentUser.typeUser == 2)?true:false)">
 
 	<div class="panel-heading ">
 
 		<span class="lead">Espace de{{client.prenom}} {{client.nom}}</span>
 	</div>
 	<ul class="list-group">
-		<li class="list-group-item">
-			{{client.adresse}}</li>
-		<li class="list-group-item">Tel:
-			{{client.telephone}}</li>
-		<li class="list-group-item">Email:
-			{{client.mail}}</li>
-		<li class="list-group-item">Revenu moyen: 
-			{{client.revenu}}</li>
+		<li class="list-group-item">{{client.adresse}}</li>
+		<li class="list-group-item">Tel: {{client.telephone}}</li>
+		<li class="list-group-item">Email: {{client.mail}}</li>
+		<li class="list-group-item">Revenu moyen: {{client.revenu}}</li>
 
 	</ul>
 </div>
-<div class="panel panel-default" ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.listeJustificatifs()">
+<div class="panel panel-default"
+	ng-controller="DemandeController as dmdctrl"
+	ng-init="dmdctrl.listeJustificatifs()">
 	<!-- Default panel contents -->
-	<div class="panel-heading" >
+	<div class="panel-heading">
 		<span class="lead">Documents disponible</span>
 	</div>
 	<div class="tablecontainer">
@@ -52,8 +48,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr
-					ng-repeat="justificatif in justificatifs | orderBy:tripar ">
+				<tr ng-repeat="justificatif in justificatifs | orderBy:tripar ">
 					<td>{{justificatif.id}}</td>
 					<td>{{justificatif.type}}</td>
 					<td>{{justificatif.date}}</td>
@@ -68,7 +63,7 @@
 	<div ng-init="value = ''">
 
 		<select class="form-control" ng-model="value">
-			<option value="" >Ajouter un document</option>
+			<option value="">Ajouter un document</option>
 			<option value="1">Domicile</option>
 			<option value="2">Impot</option>
 			<option value="3">Salaire</option>
@@ -80,7 +75,7 @@
 				class="form-control input-sm"
 				onchange="angular.element(this).scope().uploadFile(this.files, 'Domicile')" />
 		</div>
-		
+
 		<div class="col-xs-12" ng-if="(value==2)?true:false">
 			<input type="file" id="file" name="file"
 				class="form-control input-sm"
@@ -102,64 +97,70 @@
 </div>
 
 
-	<div id="RIBSectionId" class=" panel panel-default" ng-controller="CompteController as cptctrl"
-	ng-init="cptctrl.findCompteById(compte_id)" >
-		<div class="panel-heading">
-			<span class="lead">{{compte.libelle}}
-				<button ng-click="ctrl.printToCart('RIBSectionId')"
-					class="btn btn-warning btn-sm floatRight no-print">Imprimer
-					le RIB</button>
-			</span>
-		</div>
-		<ul class="list-group">
-			<li class="list-group-item">IBAN: {{compte.id}}</li>
-			<li class="list-group-item">Solde : {{compte.solde}} euros</li>
-
-			<li class="list-group-item">Remuneration :
-				{{compte.tauxRemuneration}} %
-
-				<button ng-click="" ng-if="(!compte_id)?true:false"
-					class="btn btn-danger btn-sm floatRight no-print">Modifer</button>
-			</li>
-			<li class="list-group-item"
-				ng-hide="{{(compte.tauxRemuneration!=0)?true:false}}">Seuil de
-				remuneration : {{compte.seuil}} euros</li>
-			<li class="list-group-item">Agios : {{compte.tauxDecouvert}} %</li>
-			<li class="list-group-item">Decouvert autorise :
-				{{compte.decouvert}}
-				<button ng-click="" ng-if="(!compte_id)?true:false"
-					class="btn btn-danger btn-sm floatRight no-print" >Modifer</button>
-			</li>
-		</ul>
-
-		<!-- Default panel contents -->
-		<div id="ReleveSectionId">
-		<div  class="panel-heading">
-			<span class="lead">Releve de compte
-				<button ng-click="ctrl.printToCart('ReleveSectionId')"
-					class="btn btn-warning btn-sm floatRight no-print">Imprimer
-					le Releve</button>
-			</span>
-		</div>
-		<div class="tablecontainer">
-			<table class="table table-hover ">
-				<thead>
-					<tr>
-						<th ng-click="ctrl.trier_par('Libelle')">Libelle</th>
-						<th ng-click="ctrl.trier_par('Date')">Date</th>
-						<th ng-click="ctrl.trier_par('Montant')">Montant</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="mouvement in compte.mouvements | orderBy:tripar ">
-						<td>{{mouvement.libelle}}</td>
-						<td>{{mouvement.dateMouvement}}</td>
-						<td>{{mouvement.montant}}</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		</div>
+<div id="RIBSectionId" class=" panel panel-default"
+	ng-controller="CompteController as cptctrl"
+	ng-init="cptctrl.findCompteById(compte_id)">
+	<div class="panel-heading">
+		<span class="lead">{{compte.libelle}}
+			<button ng-click="ctrl.printToCart('RIBSectionId')"
+				class="btn btn-warning btn-sm floatRight no-print">Imprimer
+				le RIB</button>
+		</span>
 	</div>
+	<ul class="list-group">
+		<li class="list-group-item">IBAN: {{compte.id}}</li>
+		<li class="list-group-item">Solde : {{compte.solde}} euros</li>
+
+		<li class="list-group-item">Remuneration :
+			{{compte.tauxRemuneration}} %
+
+			<button ng-click="" ng-if="((ctrl.currentUser.typeUser == 2)?true:false)"
+				class="btn btn-danger btn-sm floatRight no-print">Modifer</button>
+		</li>
+		<li class="list-group-item"
+			ng-hide="{{(compte.tauxRemuneration!=0)?true:false}}">Seuil de
+			remuneration : {{compte.seuil}} euros</li>
+		<li class="list-group-item">Agios : {{compte.tauxDecouvert}} %</li>
+		<li class="list-group-item">Decouvert autorise :
+			{{compte.decouvert}}
+			<button ng-click=""ng-if="((ctrl.currentUser.typeUser == 2)?true:false)"
+				class="btn btn-danger btn-sm floatRight no-print">Modifer</button>
+		</li>
+	</ul>
+</div>
+<!-- Default panel contents -->
+
+<div id="ReleveSectionId" class=" panel panel-default"
+	ng-controller="CompteController as cptctrl"
+	ng-init="cptctrl.findCompteById(compte_id)">
+
+	<div class="panel-heading">
+		<span class="lead">Releve de compte
+			<button ng-click="ctrl.printToCart('ReleveSectionId')"
+				class="btn btn-warning btn-sm floatRight no-print">Imprimer
+				le Releve</button>
+		</span>
+	</div>
+	<div class="tablecontainer">
+		<table class="table table-hover ">
+			<thead>
+				<tr>
+					<th ng-click="ctrl.trier_par('Libelle')">Libelle</th>
+					<th ng-click="ctrl.trier_par('Date')">Date</th>
+					<th ng-click="ctrl.trier_par('Montant')">Montant</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr
+					ng-repeat="mouvement in compte.mouvements | orderBy:tripar:sens ">
+					<td>{{mouvement.libelle}}</td>
+					<td>{{mouvement.dateMouvement}}</td>
+					<td>{{mouvement.montant}}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+
 
 
