--- a/GBriceCorp/src/main/webapp/static/views/Cons_RechCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_RechCli.html
@@ -12,13 +12,22 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th ng-click="ctrl.trier_par('Nom')">Nom</th>
-							<th ng-click="ctrl.trier_par('Prenom')">Prenom</th>
-							<th ng-click="ctrl.trier_par('Adresse')">Adresse</th>
+							<th ng-click="ctrl.trier_par('nom'); flechetri_1 = !flechetri_1; flechetri_2 = false; flechetri_3 = false ">Nom
+							<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_1" />
+							<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_1" />
+							</th>
+							<th ng-click="ctrl.trier_par('prenom'); flechetri_2 = !flechetri_2; flechetri_1 = false; flechetri_3 = false ">Prenom
+							<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_2" />
+							<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_2" />
+							</th>
+							<th ng-click="ctrl.trier_par('adresse'); flechetri_3 = !flechetri_3; flechetri_2 = false; flechetri_1 = false ">Adresse
+							<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_3" />
+							<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_3" />
+							</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="Client in ctrl.currentUser.clients | filter:searchClient:strict | orderBy:tripar " ng-click="ctrl.detailCompteCons(Client.id)">
+						<tr ng-repeat="Client in ctrl.currentUser.clients | filter:searchClient:strict | orderBy:tripar:sens " ng-click="ctrl.detailCompteCons(Client.id)">
 							<td>{{Client.nom}}</td>
 							<td>{{Client.prenom}}</td>
 							<td>{{Client.adresse}}</td>
